welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:4: error: reassignment to val
	} else if (aSmile=false && bSmile == false){
                         ^